WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305646
REGRESSION(iOS Debug): 'mrui_requestResizeToSize:options:completion:' is deprecated
https://bugs.webkit.org/show_bug.cgi?id=305646
Summary
REGRESSION(iOS Debug): 'mrui_requestResizeToSize:options:completion:' is depr...
Karl Rackler
Reported
2026-01-16 08:47:11 PST
Stop using 'mrui_requestResizeToSize:options:completion:' as it is deprecated. <
rdar://168305478
>
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2026-01-16 08:55:30 PST
Committed
305716@main
(f69ed7a2336b): <
https://commits.webkit.org/305716@main
> Reviewed commits have been landed. Closing PR #56716 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug