REGRESSION(iOS Debug): 'mrui_requestResizeToSize:options:completion:' is deprecated https://bugs.webkit.org/show_bug.cgi?id=305646 rdar://168305478

Unreviewed build fix.

Stop using 'mrui_requestResizeToSize:options:completion:' as it is deprecated.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(WebKit::resizeScene):

Canonical link: https://commits.webkit.org/305716@main